WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

THINK: struct passwd *userinfo; /* defined in pwd.h + if ((userinfo = getpwuid(getuid())) != NULL) + shell = strdup(userinfo->pw_shell); /* retrieve current shell */ 

TODO: xim "how to" faq entry
TODO: reorganize faq

7.5  Tue Jan 31 15:15:43 CET 2006
        - further improvements to the careful mode detection, and font width
          detection: 
          - fully double-wide fonts will now be correctly treated,
          - overlap detection was improved.
          - detect totally broken fonts (usually synthesized by xft).
          - careful mode forced refresh sometimes clashed with blinking,
            causing unnecessary screen redraws.
        - better handling of XFT combining characters.
        - enable antialiasing for some replacement fonts, as they
          might get used for other encodings which really need it, later.
        - remove spacing=100 from all default fonts, as this creates totally
          weird spacing (5 times normal) with xft.
        - removed iso10646 fallback, as xorgs iso10646 encoded fonts are mostly
          broken.
        - removed gnu unifont fallback, all combining characters are broken.
        - replace named colours by xorg's rgb.txt equivalents, to
          reduce round trip time on startup, and short-cut allocation
          of rgb:rr/gg/bb for xft.
        - short-cut allocation of rgb values in the xlib case
          (patch by Paco-Paco).
        - overhauled color management: smaller codesize, alpha support.
        - support "rgba:rrrr/gggg/bbbb/aaaa" color specifications and
          an "[alpha]" prefix.
        - try to work around Xft and Xrender forcing everything to be 100%
          transparent. Long Live Xft!
        - do not include X11/Intrinsic.h anymore, directly use
          Xlib/Xutil/Xresource directly.