@@ -16,6 +16,12 @@ THINK: struct passwd *userinfo; /* defined in pwd.h + if ((userinfo = getpwuid(g
 
 TODO: xim "how to" faq entry
 TODO: reorganize faq
+TODO: support +xxx option syntax (e.g. -tint red +tint)
+TODO: scrollstyle -next, raised/sunken, maybe extra pixels(?) w. halfshadow
+
+	- changed interpretation of [alpha] colour prefix.
+        - further round trip eliminations in the !XFT case by remembering
+          the colour components.
 
 7.5  Tue Jan 31 15:15:43 CET 2006
         - further improvements to the careful mode detection, and font width
